# ChangeLog for dev-lang/v8
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.265 2012/12/20 17:07:15 phajdan.jr Exp $

  20 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +files/v8-vfp2-r0.patch,
  v8-3.13.7.5.ebuild, v8-3.14.5.3.ebuild, v8-3.15.11.1.ebuild:
  Backport upstream patch for vfp2 support, bug #441792 by chithanh.

*v8-3.14.5.3 (20 Dec 2012)

  20 Dec 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.14.5.3.ebuild,
  -v8-3.14.5.1-r1.ebuild, -v8-3.14.5.1.ebuild, -v8-3.14.5.ebuild:
  Beta channel bump.

*v8-3.15.11.1 (15 Dec 2012)

  15 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.15.1.2-r1.ebuild,
  +v8-3.15.11.1.ebuild:
  Dev channel bump. Remove old.

  08 Dec 2012; Mike Gilbert <floppym@gentoo.org> v8-3.14.5.1-r1.ebuild,
  v8-3.14.5.2.ebuild, v8-3.15.1.2-r1.ebuild, v8-3.15.7.2.ebuild:
  Use python-any-r1.eclass to find a suitable python for building.

*v8-3.15.7.2 (08 Dec 2012)

  08 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.15.1.2.ebuild,
  +v8-3.15.7.2.ebuild:
  Dev channel bump. Remove old.

*v8-3.14.5.2 (08 Dec 2012)

  08 Dec 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.14.5.2.ebuild:
  Beta channel bump.

  25 Nov 2012; Mike Gilbert <floppym@gentoo.org> v8-3.14.5.1-r1.ebuild,
  v8-3.15.1.2-r1.ebuild, v8-9999.ebuild:
  Fix python dependency and merge changes into live ebuild.

*v8-3.14.5.1-r1 (25 Nov 2012)
*v8-3.15.1.2-r1 (25 Nov 2012)

  25 Nov 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.14.5.1-r1.ebuild,
  +v8-3.15.1.2-r1.ebuild:
  EAPI=5. Implement sub-slots. Switch to python-utils-r1.eclass.

  16 Nov 2012; Fabian Groffen <grobian@gentoo.org> v8-3.14.5.1.ebuild,
  v8-3.15.1.2.ebuild, v8-9999.ebuild:
  Fix install_name reference of d8

*v8-3.15.1.2 (15 Nov 2012)

  15 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.15.1.2.ebuild:
  Dev channel bump.

*v8-3.14.5.1 (15 Nov 2012)
