@@ -9,19 +9,19 @@ DIST v8-3.13.7.5.tar.bz2 10203429 SHA256 f28c939b89adfbb8a7e44b1c65a75c368256e68
 DIST v8-3.14.5.2.tar.bz2 10352003 SHA256 3b296a8f5cd49c3c5999fc60020931b7ef7d65369ebac5a12df2b0069669018f SHA512 4e651d31a75b0e2b766fb0e91b0f4a4ef3c6ad4e8f8eb48a5ac13424475222e8fca02946fe54cde3fb77b63b1b53cd436cefea17bb10598cac4b1608e93d0df0 WHIRLPOOL 8dd94bc4afa5e5d0203b37e5b309ecee16e34d3f6362dc9be11944a80a71528a9805a21812fa71c81324ec761e5c7439e5ec2fb1ea9b30edd7c2919b4d28e6e7
 DIST v8-3.14.5.3.tar.bz2 10352249 SHA256 f91d851abd284589272f2b338c74e10f07ce667736e8e73cbd301172cb7f75a1 SHA512 ea090f390d9ec86b33393135d9e14f2a059e0341f65aaa86e4816ee9b2f0d9dbdb1ef1d86b6eab5742c93f62279bb4ce806a86eeacc4e0e0b04b0627c462b685 WHIRLPOOL fbb44dfed7c77fac28eb4d87e9f151ab0e70d6e57807de0f6af3c71ec7006cee15cc2935f3c75375f8a793a92fcd6a9f453ba2ea4b7e0d7353f5f0382ca9d937
 DIST v8-3.15.11.1.tar.bz2 10394939 SHA256 8c621ff68e182fe200e3c8818a78f67a7d675c6303112b20f09c46e723a1cc0a SHA512 7e194d8b98cc864eb695b84cdee524258e727a6dd9f5fa8ffe96e4a280723907db7ea8799d40e87bbec6eb566563cc1e56e95c734f1d1f55bebfd8782f47bee5 WHIRLPOOL be564578d1065e9d613b5e7474a227572f456039a4daa7050cf1c3449dcd3d4b323d9f6f581c875d779f99deb477ed027f8f777ad86bf81fdf1751948ec2a4f8
-DIST v8-3.15.7.2.tar.bz2 10385188 SHA256 51083a30a1a01282d5c977e91beb44bf014da604161127039a8465f91b4623e5 SHA512 1955082efc11b8c047abb28899968d53948e010ff8ffc7bcefe61aefc2234050b24bda34d1ac85953d007adb9b528725970e2207ab46e4e2be62ba54ca0e706d WHIRLPOOL a507b532262304ee8ccddb6a35863f4a400fca7be59ca88ebd0f3a40bb9c6b433ef8f8940d629c9e92574c3bbfb6a8662a7292c116281d2bf96fb03612e3e575
+DIST v8-3.15.11.2.tar.bz2 10394544 SHA256 b52eea34c9a897a365f97ab2649c1678f99b8757f08e96fd683ac06367f52a98 SHA512 ed2ac0ff280f129922a639961cd2c2824bfd3890175b5a1eda021e90550591904e224171b4b446a2547a0062a93fa411000c7a7ff61245f8950280e692d5dc4a WHIRLPOOL 459e465b3530cad900c1507b4f232963a288070e16a37739eabbf48948b95eb64ce598f7a01b19de5f981cac0e91c3725c3d7c47ac15bf373ba3c24c244ffe52
 EBUILD v8-3.13.7.5.ebuild 3357 SHA256 c459989d6c1981e36357d51335101aa30920aca3d765188d9988df0c2e38e219 SHA512 5f32d0bd88ddbd6bea7b0e783142308f40f9d932d6cdca4c2ef5771ee56c40200e7effe2461033eb393c5cc3dc1904ff1926eccf7b16adc7671f1f2fd674c852 WHIRLPOOL b9c1c465d0b8378fcd9988b840c17d90711d2f57a6c17beaed839f79851d8a7d9772a445d76630d047f3e8ecb578bbdb7b1d287d3c5d40a246581d6ffcc0a981
 EBUILD v8-3.14.5.2.ebuild 2681 SHA256 cb590dc202c27223cf87482c2fd73affb40155f55bc236143fd3dfa881a67174 SHA512 9066b51dce5845ab1988a2a06ddf894c6218eb938dd6cdc99c9fa36e5676d172509fd21ad4ec1d9c1e4486afc5936e9aad70787b2085a97b1fe2d9747dd72d16 WHIRLPOOL c8c822c8fa8690758e93aaa1f079a6c38275cb0aa27a1c1c5e1d6f57ea826d1ffabd59a6330b1e7de2ee8d61a05584fcb844219542c6b14af2bd0b79275a9ea8
 EBUILD v8-3.14.5.3.ebuild 2745 SHA256 a9b50f113373f4456f81e6a0999b3d9c3279033743ce18bb8f0b210332379af2 SHA512 72a193040ec3ff42ccef12a54be1da3dbe781a278e2e3bf305d9cab37b7bd604d1e1ae81d6f557c2e4e8dab9cba6486d12e8c5fb969cde6cd5d07de5144a0aab WHIRLPOOL ff85f4459f69d437de34e173eb9428953879fb03b963a3967c11a3d253988f36676f4e04e21af5205c9915f3ab398a5884801c7969b19de078f03ed27a381cc2
 EBUILD v8-3.15.11.1.ebuild 2746 SHA256 7235581934282a4c5518ba6a00d67ccce1f22c31ed18c7c704703d969c6d715d SHA512 cb96589949d728078d1f76479ae4c82c51e97d2885ba31f3265e5006bbb7ae77efba4e354c372014a7d44cea99c4a9d310f8444a64d2941b08c5e7006ca7e2b6 WHIRLPOOL 2033ec0fa8f8989af488964b6c772ac746969b51bd1bca6cddef04cc0f7560e895811b73301935974c03448b7d03bf21157fe9d81fd379e65b8a3f9f46dfbcad
-EBUILD v8-3.15.7.2.ebuild 2681 SHA256 1759fb271e4b482ddda566f34d03151ba4cf3cf4f49715fb93c6305651b6c7f5 SHA512 48eac5411f631e426955506910a6d5dbb749ac0723fbedf5722cdae2f80bbcee98a705658b136a9b2f3573eb553d97273e77ecb419a033876b81dca260c164cb WHIRLPOOL d652f1f61bb2359e65c16aa4011bf91ce73ff965f32816d48685959dbfc60540b3ca9b8876fe941eeb54de125aaf6805f6c92e70a871164eb6b1acee69e059f5
+EBUILD v8-3.15.11.2.ebuild 2746 SHA256 05fe90faeff8b81bda9988121c5e54d2922b7525c274beb98d62d5aa381f3536 SHA512 29b1b5c135ecb9f51e92f7fdea4ae62d44fc54873630e0215f91e7914179273ec9cfc7b91fc154aa78e768a23e8d9fdebe62f2b2602bf26106e97a7058bc027d WHIRLPOOL 3827eb805f85c607c169c3f53457974357a9912181a2643cf8fd69948dac3f6b917c897298c29423e62c8b5adfb908cecbc11e2114ce90961ba86e889f19adea
 EBUILD v8-9999.ebuild 2697 SHA256 67dafd2e27d58bf6cb6d1a75129610188f66c30152d70647ed5bdb5aa4906b42 SHA512 4ec50e88c06d9ec0f1e4ba047ef50f3812322639f72d0bf27e9e6e67274209ba67605a6985d899cb423b305562b4ca37eaee078f3594df2180849dc370e4da20 WHIRLPOOL b71355955de91f633f2520a49bcc01e9f9062e8c98d932413cf216c7b28be928c897227d5341eb36f19b804bde72968c183ff3fc50c4fb1be9e5c1871b615623
-MISC ChangeLog 41567 SHA256 bfb98c52d9238a0be07c10f5b5d256ffebefa24d019973b8c4f47ed1ef2b43a0 SHA512 5ae53aff7fc5e5e12f7d9018030d36d0e052300c8057dadf76e78ef88bb6178103def010db587276d592b7785d3947975d84348e57f0317e705afdf2ff355a32 WHIRLPOOL 2e41f7c37f0990c2c4720acaf745a10b414c46879fa0f2bab9cac5a7b9dd0c86c3f10a17d8ea4e6234568610f0167d94663832f3f5a5f944c303398470c3b8ba
+MISC ChangeLog 41729 SHA256 c695d89e8b13ef770b203b544e8875679641b91b9579bb269ade0f5a14d0e9d6 SHA512 70ef76e5b91172437d317fae092301a8c91f865b719f27a44cb73418dd112a354307cb7d4f808001a36df4bd9925dae7f8ad0679e5ee0163385df0d7313cfef3 WHIRLPOOL eb7866f953223ab08a196ceed5c20d83ce3c80f6c25a2520c9ebdb4feefb59ceaef499684d2c9ee10f0c286289cb885e05b2ed17eeeb08d6f70a2d45bdc914c6
 MISC metadata.xml 162 SHA256 8a3ecdcf518f45ec4843398f9896c9b4d1c867ff2cf2851cf40b06f756f111e8 SHA512 51796fe7e55b73dbfbe4a6b5fd089f5e8e4d327ff67d4a267692dda38380df5048ea77e8f058c466ae17726af5f099a3240b0500d53e421d95acc583164d3fe9 WHIRLPOOL 279b6ed997fab0d4278c01814bdd067068bceff8d1ce9933087828ce7598513b5a809013c996a3b134da6072c698a87ae151cfb56407fd62ff465b165197f5bf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDTRdYACgkQuUQtlDBCeQKAFACgg07sPYzf5pQi1oSB0hfPuY4S
-FvgAni1NyYgq/IIo6m/OwUKcP17velkL
-=lPIr
+iEYEAREIAAYFAlDckrAACgkQuUQtlDBCeQJkygCeL4/0dW1wkOA2kCGq+4n54WkD
+L0wAn0ZBircWcKxLdJ15ATDt5j+QM0vm
+=v5sL
 -----END PGP SIGNATURE-----
