@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/v8-3.15.7.2.ebuild,v 1.2 2012/12/08 16:53:57 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/v8-3.15.11.2.ebuild,v 1.1 2012/12/27 18:25:42 phajdan.jr Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python2_{6,7} )
@@ -18,6 +18,10 @@ KEYWORDS="~amd64 ~arm ~x86 ~x86-fbsd ~x64-macos ~x86-macos"
 IUSE=""
 
 DEPEND="${PYTHON_DEPS}"
+
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-vfp2-r0.patch
+}
 
 src_compile() {
 	tc-export AR CC CXX RANLIB
