@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.265 2012/12/20 17:07:15 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.266 2012/12/27 18:25:42 phajdan.jr Exp $
+
+*v8-3.15.11.2 (27 Dec 2012)
+
+  27 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.15.7.2.ebuild,
+  +v8-3.15.11.2.ebuild:
+  Dev channel bump. Remove old.
 
   20 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +files/v8-vfp2-r0.patch,
   v8-3.13.7.5.ebuild, v8-3.14.5.3.ebuild, v8-3.15.11.1.ebuild:
